--- a/new-style.css
+++ b/new-style.css
@@ -1,14 +1,20 @@
 .topheader {
   color: #FF0000;
-  border: 1px solid red;
+  border: 1px solid #FF4949;
   text-align: center;
   width: 50%;
-   }
+}
 .picture {
-  color: #FF4949;
+  color: #FFFFFF;
   text-decoration: none;
-  }
-.picture:hover{
+  display: block;
+  border: 2px solid black;
+  border-radius: 4px;
+  padding: 3px;
+  background-color: black;
+  font: caption;
+}
+.picture:hover {
   color: #F4A460;
   text-decoration: underline;
-  }
+}
