--- a/new-style.css
+++ b/new-style.css
@@ -13,12 +13,12 @@
   padding: 3px 27px;
   background-color: black;
   font: caption;
-  background: linear-gradient(to top, #000000 50% , #6C6C6C);
+  background: linear-gradient(to top, #303030 , #6A6A6A 97% , #CBCBCB 99%);
 }
 .blackbutton:hover {
   /*color: #F4A460;
   text-decoration: underline;*/
   background-color: #353535;
-  border: 2px solid #353535;
+  border: 1px solid #353535;
   background: linear-gradient(to top, )
 }
