--- a/new-style.css
+++ b/new-style.css
@@ -20,5 +20,4 @@
   text-decoration: underline;*/
   background-color: #353535;
   border: 1px solid #353535;
-  background: linear-gradient(to top, )
-}
+  background: linear-gradient(to top, #353535 , #7A7A7A 97% , #DBDBDB 99%);
