--- a/new-style.css
+++ b/new-style.css
@@ -11,23 +11,20 @@
   display: inline-block;
   /*border: 1px solid;*/
   border-radius: 4px;
-  padding: 3px 27px;
+ /* padding: 3px 27px;*/
   font: caption;
  /* background: linear-gradient(to top, #303030 , #6A6A6A 97% , #CBCBCB 99%);*/
 }
 
 .blackbutton {
   border: 1px solid black;
-  border-radius: 4px;
   padding: 3px 27px;
-  background-color: black;
+ /* background-color: black;*/
   background: linear-gradient(to top, #303030 , #6A6A6A 97% , #CBCBCB 99%);
 }
 
 .blackbutton:hover {
-  /*color: #F4A460;
-  text-decoration: underline;*/
-  background-color: #353535;
+  /*background-color: #353535;*/
   border: 1px solid #353535;
   background: linear-gradient(to top, #353535 , #7A7A7A 97% , #DBDBDB 99%);
 }
@@ -35,9 +32,21 @@
 .dangerbutton {
 border: 1px solid #FC5555;
 background: linear-gradient(to top, #FC5555 , #FD8C8C 97% , #FFDCDC 99%);
+padding: 3px 23px;
+}
+
+.dangerbutton:hover {
+  border: 1px solid #FD6565;	
+  background: linear-gradient(to top, #FD6565 , #FD9797 97% , #FFE2E2 99%); 
 }
 
 .successbutton {
 border: 1px solid #329739;
 background: linear-gradient(to top, #329739 , #62BC68 97% , #DBF7DD 99%);
+padding: 3px 21px;
+}
+
+.successbutton:hover {
+border: 1px solid #469258;
+background: linesr-gradient(to top, #469258 , #6FB880 97% , #DEF4E3 99%); 
 }
