--- a/new-style.css
+++ b/new-style.css
@@ -48,13 +48,13 @@
 }
 
 .sprite {
-	background: url('sprite.png') no-repeat -314px -92px;
-	width: 77px;
-	height: 44px;
+	background: url('sprite.png') no-repeat -314px -80px;
+	width: 80px;
+	height: 68px;
 }
 
 .sprite:active {
-	background: url('sprite.png') no-repeat -314px -220px;
-	width: 63px;
+	background-position: -314px -220px;
+	width: 80px;
 	height: 68px;
 }
