--- a/enter-style.css
+++ b/enter-style.css
@@ -40,14 +40,20 @@ body {
 }
 
 .button {
+  display: block;
+  border: none;
   text-decoration: none;
+  font-size: 15px;
   height: 50px;
   width: 400px;
-  border-radius: 4px;
-  background: #9DA7B4;
+  border-radius: 2px;
   color: white;
 }
 
+.submit {
+  background: #9DA7B4;  
+}
+
 .dropbox {
-  
+  background: #5A95E6; 
 }
