--- a/enter-style.css
+++ b/enter-style.css
@@ -1,3 +1,7 @@
+* {
+  font-family: Helvetica, sans-serif, Arial;
+}
+
 body {
   background:#222222;
 }
@@ -44,7 +48,7 @@ body {
   border: none;
   text-decoration: none;
   font-size: 15px;
-  height: 50px;
+  padding: 15px 0;
   width: 400px;
   border-radius: 2px;
   color: white;
