--- a/enter-style.css
+++ b/enter-style.css
@@ -8,7 +8,7 @@ body {
 
 input[type="text"], input[type="password"], input[type="email"]{ 
   border: none;
-  border-bottom: 1px solid #9DA7B4;
+  border-bottom: 1px solid #C4C8CF;
 }
 
 .back {
@@ -23,12 +23,10 @@ input[type="text"], input[type="password"], input[type="email"]{
   position: absolute;
   padding: 20px;
   background-color: #FFFFFF;
-  width: 410px;
-  height: 373px;
+  width: 430px;
+  height: 390px;
   border-radius: 24px;
-  /*left: 50%;
-  top: 50%;
-  margin-left: -150px;
+  /*margin-left: 45px;
   margin-top: -100px;*/
   /*position: fixed;*/
   margin: auto;
@@ -39,9 +37,9 @@ input[type="text"], input[type="password"], input[type="email"]{
 }
 
 .login {
-  width: 400px;
+  width: 370px;
   font-size: 15px;
-  padding: 15px 0;
+  padding: 12px 0;
   border-bottom: 1px solid #9DA7B4;
   border-top: none;
   border-left: none;
@@ -52,31 +50,38 @@ input[type="text"], input[type="password"], input[type="email"]{
 }
 
 .mail {
-  width: 400px;
+  width: 370px;
   font-size: 15px;
-  padding: 15px 0;
+  padding: 12px 0;
 }
 
 .password {
+  width: 170px;
   font-size: 15px;
-  padding: 15px 0;
+  padding: 12px 0;
+}
+
+.pas {
+  margin-right: 30px;
 }
 
 .button {
   display: block;
   border: none;
   text-decoration: none;
-  font-size: 15px;
-  padding: 15px 0;
-  width: 400px;
+  font-size: 14px;
+  padding: 12px 0;
+  width: 370px;
   border-radius: 2px;
   color: white;
 }
 
 .submit {
   background: #9DA7B4;  
+  margin-bottom: 30px;
 }
 
 .dropbox {
+  margin-top: 30px;
   background: #5A95E6; 
 }
