--- a/enter-style.css
+++ b/enter-style.css
@@ -73,6 +73,7 @@ input[type="text"], input[type="password"], input[type="email"]{
   width: 370px;
   border-radius: 2px;
   color: white;
+  cursor: pointer;
 }
 
 .submit {
