--- a/enter-style.css
+++ b/enter-style.css
@@ -21,7 +21,9 @@ body {
   background-size: cover;
 }
 
-input[type="text"], input[type="password"], input[type="email"]{ 
+input[type="text"],
+input[type="password"],
+input[type="email"]{ 
   border: none;
   border-bottom: 1px solid #C4C8CF;
 }
@@ -52,14 +54,12 @@ input[type="text"], input[type="password"], input[type="email"]{
   border-left: none;
   border-right: none;
   background: url('imgs/glyphicons-halflings.png') no-repeat -169px -1px;
-  /*width: 12px;
-  height: 13px;*/
 }
 
 .mail {
   width: 370px;
   font-size: 15px;
-  padding: 12px 0;
+  padding: 12px 0; 
 }
 
 .password {
@@ -85,6 +85,7 @@ input[type="text"], input[type="password"], input[type="email"]{
 }
 
 .submit {
+  text-transform: uppercase;
   background: #9DA7B4;  
   margin-bottom: 30px;
 }
@@ -101,7 +102,7 @@ input[type="text"], input[type="password"], input[type="email"]{
   margin-top: 30px;
   background: #5A95E6; 
   position: relative;
-  
+  text-transform: uppercase;
 }
 
 .dropbox:hover {
