--- a/enter-style.css
+++ b/enter-style.css
@@ -46,27 +46,31 @@ input[type="email"]{
 }
 
 .login {
-  width: 370px;
+  width: 347px;
   font-size: 15px;
-  padding: 12px 0;
-  margin-left: 0; 
+  padding: 12px 10px;
+  margin-left: 50px;
+  border: none; 
   border-bottom: 1px solid #9DA7B4;
-  border-top: none;
-  border-left: none;
-  border-right: none;
   background: url('imgs/glyphicons-halflings.png') no-repeat -169px -1px;
 }
 
-.login:before {
-  display: block;
+.plogin {
+  margin-left: 7px;
+}
+
+
+.plogin:before {
+  display: inline;
   position: absolute;
-  top: 0;
-  left: 0;
+  margin: 11px 23px;
   content: "\f007";
+  color: #9DA7B4;
   /*background: #5186CF;*/
   /*width: 43px;*/
-  padding: 12px 0;
-  /*border-radius: 2px 0 0 2px;*/
+  padding: 8px;
+  /*margin-top: 11px;*/
+  border-bottom: 1px solid #C4C8CF;
   font-family: FontAwesome;
  }
 
