--- a/enter-style.css
+++ b/enter-style.css
@@ -21,7 +21,7 @@ body {
   background-size: cover;
 }
 
-input[type="text"],
+/*input[type="text"],*/
 input[type="password"],
 input[type="email"]{ 
   border: none;
@@ -50,13 +50,14 @@ input[type="email"]{
   font-size: 15px;
   padding: 12px 10px;
   margin-left: 30px;
-  border: none; 
-  border-bottom: 1px solid #9DA7B4;
-  /*background: url('imgs/glyphicons-halflings.png') no-repeat -169px -1px;*/
+  border: none;
+  background: url('imgs/glyphicons-halflings.png') no-repeat -169px -1px;
 }
 
 .plogin {
-  margin-left: 7px;
+  margin-left: 30px;
+  border-bottom: 1px solid #C4C8CF;
+  width: 370px;
 }
 
 
@@ -73,7 +74,6 @@ input[type="email"]{
  
 .user {
   position: absolute;
-  border-bottom: 1px solid #C4C8CF;
   color: #C4C8CF;
   font-size: 15px;
   padding: 14px;
